<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:columnCount="2"
    android:padding="@dimen/paddding_grid"
    android:useDefaultMargins="true"
    android:layout_height="match_parent"
    tools:context="com.example.ebubekirdoan.idealkilo.MainActivity">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText3"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal">
        <requestFocus/>

    </EditText>

    <TextView

        android:layout_width="wrap_content"
        android:id="@+id/BoyTxt"
        android:layout_row="0"
        android:layout_column="1"
        android:background="@android:color/holo_orange_dark"
        android:layout_gravity="fill_horizontal"
        android:layout_height="35dp"
        android:padding="8dp" />


    <TextView
        android:text="@string/Kilo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/kiloTxt"
        android:layout_gravity="center_vertical|right"
        android:padding="8dp" />

    <TextView
        android:text="50 kg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Kilo_tv"
        android:layout_row="2"
        android:layout_column="1"
        android:textSize="20sp" />


    <RadioGroup
        android:layout_gravity="fill_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radioGrup"
        android:layout_row="3"
        android:layout_column="1"
        android:orientation="horizontal">
        <RadioButton
            android:text="@string/Bay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Bay"
            android:layout_weight="1"
            android:checked="true" />
        <RadioButton
            android:text="@string/Bayan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Bayan"
            android:layout_weight="1" />
    </RadioGroup>

    <TextView
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:text="@string/Cinsiyet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cinsiyetTxt"
        android:layout_row="3"

        android:layout_column="0"
        android:layout_gravity="right|center_vertical"
        android:padding="8dp" />

    <TextView
        android:text="@string/IdealKilo"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/IdealKiloTxt"
        android:padding="8dp"
        android:layout_gravity="fill_horizontal"
        />

    <TextView
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/IdealKiloSonuc"
        android:padding="8dp"
        android:background="?attr/actionModeSplitBackground" />

    <TextView
        android:text="@string/Durum"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/DurumTxt"
        android:layout_gravity="fill_horizontal"
        android:padding="8dp" />

    <TextView
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/DurumTxtSonuc"
        android:layout_gravity="fill_horizontal"
        android:background="@android:color/holo_green_dark"
        android:padding="8dp" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/seekBar2"
        android:layout_row="1"
        android:progress="20"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"/>


    <TextView
        android:text="@string/Boy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView8"

        android:layout_row="0"
        android:layout_column="0"
        android:layout_gravity="center_vertical|right"
        android:padding="@dimen/padding_Textview" />



</GridLayout>
